Fix VideoThumbnailCreatorTest to use Paths.get() instead of Path.of() for better compatibility